Add informational stories of what happened after previous item

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -27,3 +27,5 @@
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
 <div translate>Confirm selection</div>
+<div translate>Imported namespaces are here</div>
+<div translate>Class is here</div>
