--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -9,11 +9,13 @@
 <div translate>Guide through creating new profile</div>
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
+<div translate>Guide through creating a class</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
 <div translate>Congratulations for completing profile creation!</div>
 <div translate>Congratulations for completing namespace require!</div>
 <div translate>Congratulations for completing specialize class!</div>
+<div translate>Congratulations for completing new class creation!</div>
 <div translate>Open library details</div>
 <div translate>Open profile details</div>
 <div translate>Modify library</div>
@@ -21,9 +23,12 @@
 <div translate>Add reference to namespace</div>
 <div translate>Search for jhs</div>
 <div translate>Search for palvelu</div>
+<div translate>Search for tuote</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
 <div translate>Select name and description</div>
+<div translate>Select new creation</div>
+<div translate>Select concept suggest creation</div>
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
 <div translate>Confirm selection</div>
