--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -24,8 +24,10 @@
 <div translate>Search for jhs</div>
 <div translate>Search for palvelu</div>
 <div translate>Search for tuote</div>
+<div translate>Search for nimi</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
+<div translate>Select nimi</div>
 <div translate>Select name and description</div>
 <div translate>Select new creation</div>
 <div translate>Select concept suggest creation</div>
@@ -34,3 +36,5 @@
 <div translate>Confirm selection</div>
 <div translate>Imported namespaces are here</div>
 <div translate>Class is here</div>
+<div translate>Attribute is here</div>
+<div translate>Property is here</div>
