Add association help implemented

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -10,31 +10,42 @@
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
 <div translate>Guide through creating a class</div>
+<div translate>Guide through adding an association</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
 <div translate>Congratulations for completing profile creation!</div>
 <div translate>Congratulations for completing namespace require!</div>
 <div translate>Congratulations for completing specialize class!</div>
 <div translate>Congratulations for completing new class creation!</div>
+<div translate>Congratulations for completing adding an association!</div>
 <div translate>Open library details</div>
 <div translate>Open profile details</div>
 <div translate>Modify library</div>
 <div translate>Modify profile</div>
+<div translate>Modify class</div>
 <div translate>Add reference to namespace</div>
 <div translate>Search for jhs</div>
 <div translate>Search for palvelu</div>
 <div translate>Search for tuote</div>
 <div translate>Search for nimi</div>
+<div translate>Search for tuotetaan</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
 <div translate>Select nimi</div>
+<div translate>Select tuote</div>
 <div translate>Select name and description</div>
 <div translate>Select new creation</div>
+<div translate>Select new association creation</div>
 <div translate>Select concept suggest creation</div>
+<div translate>Select association target</div>
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
 <div translate>Confirm selection</div>
 <div translate>Imported namespaces are here</div>
 <div translate>Class is here</div>
 <div translate>Attribute is here</div>
+<div translate>Association is here</div>
+<div translate>Association target is here</div>
 <div translate>Property is here</div>
+<div translate>Label can be changed</div>
+<div translate>Classes can be seen visually here</div>
