--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -10,6 +10,7 @@
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
 <div translate>Guide through creating a class</div>
+<div translate>Guide through adding an attribute</div>
 <div translate>Guide through adding an association</div>
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
@@ -17,6 +18,7 @@
 <div translate>Congratulations for completing namespace require!</div>
 <div translate>Congratulations for completing specialize class!</div>
 <div translate>Congratulations for completing new class creation!</div>
+<div translate>Congratulations for completing adding an attribute!</div>
 <div translate>Congratulations for completing adding an association!</div>
 <div translate>Open library details</div>
 <div translate>Open profile details</div>
