Help for class assignation to library
Closes #583

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -9,6 +9,7 @@
 <div translate>Guide through creating new profile</div>
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
+<div translate>Guide through assigning class to a library</div>
 <div translate>Guide through creating a class</div>
 <div translate>Guide through adding an attribute</div>
 <div translate>Guide through adding an association</div>
@@ -17,6 +18,7 @@
 <div translate>Congratulations for completing profile creation!</div>
 <div translate>Congratulations for completing namespace require!</div>
 <div translate>Congratulations for completing specialize class!</div>
+<div translate>Congratulations for completing class assignation!</div>
 <div translate>Congratulations for completing new class creation!</div>
 <div translate>Congratulations for completing adding an attribute!</div>
 <div translate>Congratulations for completing adding an association!</div>
