Updated fi translations

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -6,7 +6,9 @@
 <div translate>Diipadaa</div>
 <div translate>Select group</div>
 <div translate>Guide through creating new library</div>
+<div translate>Guide through creating new library description</div>
 <div translate>Guide through creating new profile</div>
+<div translate>Guide through creating new profile description</div>
 <div translate>Guide through requiring a namespace</div>
 <div translate>Guide through specializing a class</div>
 <div translate>Guide through assigning class to a library</div>
