Localize help data

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -55,3 +55,14 @@
 <div translate>Property is here</div>
 <div translate>Label can be changed</div>
 <div translate>Classes can be seen visually here</div>
+
+<div translate>Palvelu</div>
+<div translate>Testikirjasto</div>
+<div translate>Palveluprofiili</div>
+<div translate>Tuote</div>
+<div translate>Asia joka tuotetaan</div>
+<div translate>Nimi</div>
+<div translate>Tuotetaan</div>
+<div translate>Tuotetaan palvelussa</div>
+<div translate>tapahtumaketju joka toteuttaa jotain</div>
+<div translate>jhs</div>
