Updated finnish localizations

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -5,6 +5,8 @@
 <div translate>Class description info</div>
 <div translate>Diipadaa</div>
 <div translate>Select group</div>
+<div translate>Confirm selection info</div>
+<div translate>Group is a categorization of interoperability descriptions to different fields and domains</div>
 <div translate>Guide through creating new library</div>
 <div translate>Guide through creating new library description</div>
 <div translate>Guide through creating new profile</div>
@@ -18,6 +20,8 @@
 <div translate>Select help topic</div>
 <div translate>Congratulations for completing library creation!</div>
 <div translate>Congratulations for completing profile creation!</div>
+<div translate>Congratulations for completing library creation! description</div>
+<div translate>Congratulations for completing profile creation! description</div>
 <div translate>Congratulations for completing namespace require!</div>
 <div translate>Congratulations for completing specialize class!</div>
 <div translate>Congratulations for completing class assignation!</div>
@@ -25,11 +29,20 @@
 <div translate>Congratulations for completing adding an attribute!</div>
 <div translate>Congratulations for completing adding an association!</div>
 <div translate>Open library details</div>
+<div translate>Open library details description</div>
 <div translate>Open profile details</div>
+<div translate>Open profile details description</div>
 <div translate>Modify library</div>
 <div translate>Modify profile</div>
 <div translate>Modify class</div>
+<div translate>Modify library description</div>
+<div translate>Modify profile description</div>
+<div translate>Modify class description</div>
 <div translate>Add reference to namespace</div>
+<div translate>Add reference to namespace description</div>
+<div translate>Add profile description</div>
+<div translate>Add library description</div>
+<div translate>Add class description</div>
 <div translate>Search for jhs</div>
 <div translate>Search for palvelu</div>
 <div translate>Search for tuote</div>
@@ -44,18 +57,37 @@
 <div translate>Select new association creation</div>
 <div translate>Select concept suggest creation</div>
 <div translate>Select association target</div>
+
+<div translate>Search for jhs info</div>
+<div translate>Search for palvelu info</div>
+<div translate>Search for tuote info</div>
+<div translate>Search for nimi info</div>
+<div translate>Search for tuotetaan info</div>
+<div translate>Select jhs info</div>
+<div translate>Select palvelu info</div>
+<div translate>Select nimi info</div>
+<div translate>Select tuote info</div>
+<div translate>Select name and description info</div>
+<div translate>Select new creation info</div>
+<div translate>Select new association creation info</div>
+<div translate>Select concept suggest creation info</div>
+<div translate>Select association target info</div>
+
 <div translate>Help is open</div>
 <div translate>Are you sure that you want to close help?</div>
 <div translate>Confirm selection</div>
 <div translate>Imported namespaces are here</div>
 <div translate>Class is here</div>
+<div translate>Class is here info</div>
 <div translate>Attribute is here</div>
+<div translate>Attribute is here info</div>
 <div translate>Association is here</div>
+<div translate>Association is here info</div>
 <div translate>Association target is here</div>
 <div translate>Property is here</div>
+<div translate>Property is here info</div>
 <div translate>Label can be changed</div>
 <div translate>Classes can be seen visually here</div>
-
 <div translate>Palvelu</div>
 <div translate>Testikirjasto</div>
 <div translate>Palveluprofiili</div>
@@ -66,3 +98,8 @@
 <div translate>Tuotetaan palvelussa</div>
 <div translate>tapahtumaketju joka toteuttaa jotain</div>
 <div translate>jhs</div>
+<div translate>Classes can be modified</div>
+<div translate>Changes need to be saved</div>
+<div translate>Imported namespaces can be used to link resources to existing standards</div>
+<div translate>Select the vocabulary that is missing the required concept</div>
+<div translate>Suggest definition or description for the concept</div>
