updated help localizations

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -45,9 +45,11 @@
 <div translate>Add class description</div>
 <div translate>Search for jhs</div>
 <div translate>Search for palvelu</div>
-<div translate>Search for tuote</div>
+<div translate>Search for tuote class</div>
+<div translate>Search for tuote concept</div>
 <div translate>Search for nimi</div>
 <div translate>Search for tuotetaan</div>
+<div translate>Search for tuotetaan concept</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
 <div translate>Select nimi</div>
@@ -60,12 +62,15 @@
 
 <div translate>Search for jhs info</div>
 <div translate>Search for palvelu info</div>
-<div translate>Search for tuote info</div>
+<div translate>Search for tuote class info</div>
+<div translate>Search for tuote concept info</div>
 <div translate>Search for nimi info</div>
 <div translate>Search for tuotetaan info</div>
+<div translate>Search for tuotetaan concept info</div>
 <div translate>Select jhs info</div>
 <div translate>Select palvelu info</div>
 <div translate>Select nimi info</div>
+<div translate>Select tuote info</div>
 <div translate>Select tuote info</div>
 <div translate>Select name and description info</div>
 <div translate>Select new creation info</div>
@@ -103,3 +108,7 @@
 <div translate>Imported namespaces can be used to link resources to existing standards</div>
 <div translate>Select the vocabulary that is missing the required concept</div>
 <div translate>Suggest definition or description for the concept</div>
+<div translate>Create new info</div>
+
+<div>You can add new attribute or association to the Class from here</div>
+
