Added help localizations

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -67,6 +67,8 @@
 <div translate>Search for nimi info</div>
 <div translate>Search for tuotetaan info</div>
 <div translate>Search for tuotetaan concept info</div>
+<div translate>Search for tuotetaan predicate</div>
+<div translate>Search for tuotetaan predicate info</div>
 <div translate>Select jhs info</div>
 <div translate>Select palvelu info</div>
 <div translate>Select nimi info</div>
@@ -109,6 +111,13 @@
 <div translate>Select the vocabulary that is missing the required concept</div>
 <div translate>Suggest definition or description for the concept</div>
 <div translate>Create new info</div>
+<div translate>Association target must be selected from list of existing classes</div>
+<div translate>Association target can be changed from the list or by typing the identifier</div>
+<div translate>You can add new attribute or association to the Class from here</div>
 
-<div>You can add new attribute or association to the Class from here</div>
-
+<div translate>This tutorial shows how to import new namespace to the model</div>
+<div translate>This tutorial shows how to create a new shape from a class</div>
+<div translate>This tutorial shows how to add Class from existing library</div>
+<div translate>This tutorial shows how to add new attribute</div>
+<div translate>This tutorial shows how to create a new Class</div>
+<div translate>This tutorial shows how to add association to a Class</div>
