Add localization keys for new helps

--- a/src/translations/help.html
+++ b/src/translations/help.html
@@ -50,15 +50,39 @@
 <div translate>Search for nimi</div>
 <div translate>Search for tuotetaan</div>
 <div translate>Search for tuotetaan concept</div>
+<div translate>Search for henkilö</div>
+<div translate>Search for henkilö info</div>
+<div translate>Search for yhteystiedot</div>
+<div translate>Search for yhteystiedot info</div>
+<div translate>Search for osoite</div>
+<div translate>Search for osoite info</div>
+<div translate>Search for vene class</div>
+<div translate>Search for vene class info</div>
+<div translate>Search for vene concept</div>
+<div translate>Search for vene concept info</div>
+<div translate>Search for liikenneväline</div>
+<div translate>Search for liikenneväline info</div>
 <div translate>Select jhs</div>
 <div translate>Select palvelu</div>
 <div translate>Select nimi</div>
 <div translate>Select tuote</div>
+<div translate>Select henkilö</div>
+<div translate>Select henkilö info</div>
+<div translate>Select yhteystiedot</div>
+<div translate>Select yhteystiedot info</div>
+<div translate>Select osoite</div>
+<div translate>Select osoite info</div>
+<div translate>Select liikenneväline</div>
+<div translate>Select liikenneväline info</div>
 <div translate>Select name and description</div>
+<div translate>Select registration number and vehicle code</div>
+<div translate>Select registration number and vehicle code info</div>
 <div translate>Select new creation</div>
+<div translate>Select new attribute creation</div>
 <div translate>Select new association creation</div>
 <div translate>Select concept suggest creation</div>
 <div translate>Select association target</div>
+<div translate>Select super class</div>
 
 <div translate>Search for jhs info</div>
 <div translate>Search for palvelu info</div>
@@ -69,6 +93,16 @@
 <div translate>Search for tuotetaan concept info</div>
 <div translate>Search for tuotetaan predicate</div>
 <div translate>Search for tuotetaan predicate info</div>
+<div translate>Search for omistaja</div>
+<div translate>Search for omistaja info</div>
+<div translate>Search for omistaja predicate</div>
+<div translate>Search for omistaja predicate info</div>
+<div translate>Search for matkustajien lukumäärä</div>
+<div translate>Search for matkustajien lukumäärä info</div>
+<div translate>Search for matkustajien lukumäärä concept</div>
+<div translate>Search for matkustajien lukumäärä concept info</div>
+<div translate>Select omistaja</div>
+<div translate>Select omistaja info</div>
 <div translate>Select jhs info</div>
 <div translate>Select palvelu info</div>
 <div translate>Select nimi info</div>
@@ -76,6 +110,7 @@
 <div translate>Select tuote info</div>
 <div translate>Select name and description info</div>
 <div translate>Select new creation info</div>
+<div translate>Select new attribute creation info</div>
 <div translate>Select new association creation info</div>
 <div translate>Select concept suggest creation info</div>
 <div translate>Select association target info</div>
@@ -91,6 +126,9 @@
 <div translate>Association is here</div>
 <div translate>Association is here info</div>
 <div translate>Association target is here</div>
+<div translate>Super class is here</div>
+<div translate>Concept is here</div>
+<div translate>Concept is here info</div>
 <div translate>Property is here</div>
 <div translate>Property is here info</div>
 <div translate>Label can be changed</div>
@@ -113,6 +151,8 @@
 <div translate>Create new info</div>
 <div translate>Association target must be selected from list of existing classes</div>
 <div translate>Association target can be changed from the list or by typing the identifier</div>
+<div translate>Super class must be selected from list of existing classes</div>
+<div translate>Super class can be changed from the list or by typing the identifier</div>
 <div translate>You can add new attribute or association to the Class from here</div>
 
 <div translate>This tutorial shows how to import new namespace to the model</div>
