Copying shapes implemented

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -162,6 +162,7 @@
 <div translate>Non specialized classes are not allowed</div>
 <div translate>Use class</div>
 <div translate>Specialize class</div>
+<div translate>Copy shape</div>
 <div translate>Show history</div>
 <div translate>Historical versions</div>
 <div translate>Close</div>
