Assign or specialize association target from visualization

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -231,6 +231,8 @@
 <div translate>Change reusable predicate</div>
 <div translate>Assign reusable predicate to library</div>
 <div translate>Assign reusable predicate to profile</div>
+<div translate>Assign class predicate to library</div>
+<div translate>Specialize class predicate to profile</div>
 <div translate>Copy reusable association to library</div>
 <div translate>Copy reusable association to profile</div>
 <div translate>Copy reusable attribute to library</div>
