Add xmlWrapper and xmlAttribute boolean properties
https://github.com/CSC-IT-Center-for-Science/iow-ui/issues/591

--- a/src/translations/titles.html
+++ b/src/translations/titles.html
@@ -54,7 +54,7 @@
 <div translate>Namespace</div><div translate>Namespace info</div>
 <div translate>Prefix</div><div translate>Prefix info</div>
 
-<div translate>Permanent identifier</div><div translate>Permanent identifier info</div>
+<div translate>Resource identifier</div><div translate>Resource identifier info</div>
 <div translate>Default value</div><div translate>Default value info</div>
 <div translate>Allowed values</div><div translate>Allowed values info</div>
 <div translate>Class type</div><div translate>Class type info</div>
@@ -65,6 +65,8 @@
 <div translate>Min length</div><div translate>Min length info</div>
 <div translate>Max length</div><div translate>Max length info</div>
 <div translate>Max length</div><div translate>Max length info</div>
+<div translate>XML Wrapper</div><div translate>XML Wrapper info</div>
+<div translate>XML Attribute</div><div translate>XML Attribute info</div>
 
 <div translate>Homepage</div><div translate>Homepage info</div>
 <div translate>Model languages</div><div translate>Model languages info</div>
